--- a/S01 - Bootcamp and Binary Classification/SLU02 - Subsetting Data in Pandas/Exercise notebook.ipynb
+++ b/S01 - Bootcamp and Binary Classification/SLU02 - Subsetting Data in Pandas/Exercise notebook.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -81,7 +81,184 @@
      "solution": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>restaurant name</th>\n",
+       "      <th>neighbourhood</th>\n",
+       "      <th>city</th>\n",
+       "      <th>cuisines</th>\n",
+       "      <th>establishment</th>\n",
+       "      <th>average_cost_for_two</th>\n",
+       "      <th>photo_count</th>\n",
+       "      <th>has_table_booking</th>\n",
+       "      <th>has_online_delivery</th>\n",
+       "      <th>aggregate_rating</th>\n",
+       "      <th>votes</th>\n",
+       "      <th>timings</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>restaurant id</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1400052</th>\n",
+       "      <td>Giolitti</td>\n",
+       "      <td>Navona - Pantheon</td>\n",
+       "      <td>Roma</td>\n",
+       "      <td>Cafe, Ice Cream, Italian, Desserts</td>\n",
+       "      <td>Ice Cream Shop</td>\n",
+       "      <td>40</td>\n",
+       "      <td>1479</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4.9</td>\n",
+       "      <td>244</td>\n",
+       "      <td>07:00 to 01:00 (Mon-Sun)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2400052</th>\n",
+       "      <td>Honorato</td>\n",
+       "      <td>Baixa</td>\n",
+       "      <td>Porto</td>\n",
+       "      <td>Burger, Gourmet Fast Food</td>\n",
+       "      <td>Casual Dining</td>\n",
+       "      <td>25</td>\n",
+       "      <td>527</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4.1</td>\n",
+       "      <td>600</td>\n",
+       "      <td>12 Noon to 12 Midnight (Mon-Wed, Sun), 12 Noon...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2500052</th>\n",
+       "      <td>Cartel 36</td>\n",
+       "      <td>Parque das Nações</td>\n",
+       "      <td>Lisboa</td>\n",
+       "      <td>Contemporary, Steak</td>\n",
+       "      <td>Casual Dining</td>\n",
+       "      <td>40</td>\n",
+       "      <td>947</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>730</td>\n",
+       "      <td>Fechado (Seg),12:30 a 15:30, 19:30 a 24:00 (Te...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3100196</th>\n",
+       "      <td>Pabbas</td>\n",
+       "      <td>Lalbagh</td>\n",
+       "      <td>Mangalore</td>\n",
+       "      <td>Ice Cream, Desserts, Beverages, Fast Food</td>\n",
+       "      <td>Dessert Parlour</td>\n",
+       "      <td>250</td>\n",
+       "      <td>1507</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4.9</td>\n",
+       "      <td>2007</td>\n",
+       "      <td>9am – 9pm (Mon-Sun)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6100037</th>\n",
+       "      <td>Masala Zone</td>\n",
+       "      <td>Marshall Street, Soho</td>\n",
+       "      <td>London</td>\n",
+       "      <td>Indian, Curry</td>\n",
+       "      <td>Casual Dining</td>\n",
+       "      <td>30</td>\n",
+       "      <td>139</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4.4</td>\n",
+       "      <td>131</td>\n",
+       "      <td>12 Noon to 11 PM (Mon-Fri),12:30 PM to 11 PM (...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              restaurant name          neighbourhood       city  \\\n",
+       "restaurant id                                                     \n",
+       "1400052              Giolitti      Navona - Pantheon       Roma   \n",
+       "2400052              Honorato                  Baixa      Porto   \n",
+       "2500052             Cartel 36      Parque das Nações     Lisboa   \n",
+       "3100196                Pabbas                Lalbagh  Mangalore   \n",
+       "6100037           Masala Zone  Marshall Street, Soho     London   \n",
+       "\n",
+       "                                                cuisines    establishment  \\\n",
+       "restaurant id                                                               \n",
+       "1400052               Cafe, Ice Cream, Italian, Desserts   Ice Cream Shop   \n",
+       "2400052                        Burger, Gourmet Fast Food    Casual Dining   \n",
+       "2500052                              Contemporary, Steak    Casual Dining   \n",
+       "3100196        Ice Cream, Desserts, Beverages, Fast Food  Dessert Parlour   \n",
+       "6100037                                    Indian, Curry    Casual Dining   \n",
+       "\n",
+       "               average_cost_for_two  photo_count  has_table_booking  \\\n",
+       "restaurant id                                                         \n",
+       "1400052                          40         1479                  0   \n",
+       "2400052                          25          527                  0   \n",
+       "2500052                          40          947                  0   \n",
+       "3100196                         250         1507                  0   \n",
+       "6100037                          30          139                  0   \n",
+       "\n",
+       "               has_online_delivery  aggregate_rating  votes  \\\n",
+       "restaurant id                                                 \n",
+       "1400052                          0               4.9    244   \n",
+       "2400052                          0               4.1    600   \n",
+       "2500052                          0               4.5    730   \n",
+       "3100196                          1               4.9   2007   \n",
+       "6100037                          0               4.4    131   \n",
+       "\n",
+       "                                                         timings  \n",
+       "restaurant id                                                     \n",
+       "1400052                                 07:00 to 01:00 (Mon-Sun)  \n",
+       "2400052        12 Noon to 12 Midnight (Mon-Wed, Sun), 12 Noon...  \n",
+       "2500052        Fechado (Seg),12:30 a 15:30, 19:30 a 24:00 (Te...  \n",
+       "3100196                                      9am – 9pm (Mon-Sun)  \n",
+       "6100037        12 Noon to 11 PM (Mon-Fri),12:30 PM to 11 PM (...  "
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Read restaurants dataset and set restaurant name column as index\n",
     "restaurants = pd.read_csv('data/zomato_restaurants.csv',index_col='restaurant id').sort_index()\n",
@@ -113,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -138,14 +315,13 @@
     "\n",
     "    \"\"\"\n",
     "    \n",
-    "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    return df.city\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -181,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -205,13 +381,12 @@
     "        (pd.DataFrame): aggregate_rating and average_cost_for_two columns\n",
     "\n",
     "    \"\"\"\n",
-    "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()"
+    "    return df[['aggregate_rating', 'average_cost_for_two']]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -245,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -270,13 +445,12 @@
     "\n",
     "    \"\"\"\n",
     "    \n",
-    "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()"
+    "    return df.iloc[[78,156,390]]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -320,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -345,13 +519,12 @@
     "\n",
     "    \"\"\"\n",
     "    \n",
-    "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()"
+    "    return df.loc[[8202867, 16553285], ['aggregate_rating', 'restaurant name']]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -395,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -419,13 +592,12 @@
     "        (pd.DataFrame): df with hidden (NaN) rows\n",
     "\n",
     "    \"\"\"\n",
-    "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()"
+    "    return df.mask(df.city=='London')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -459,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -485,13 +657,12 @@
     "    \"\"\"\n",
     "    \n",
     "    \n",
-    "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()"
+    "    return df.where(df.has_table_booking==1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -535,7 +706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -560,13 +731,12 @@
     "\n",
     "    \"\"\"\n",
     "    \n",
-    "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()"
+    "    return df.loc[6122300:6130000]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -616,7 +786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -640,13 +810,13 @@
     "        (pd.DataFrame): subsetted df\n",
     "\n",
     "    \"\"\"\n",
-    "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()"
+    "    return df.loc[(df.city == 'Roma') & (df.aggregate_rating > 4.5) & (df.establishment == 'Ice Cream Shop'),\n",
+    "                  ['neighbourhood', 'aggregate_rating', 'votes', 'average_cost_for_two']]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -699,7 +869,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -723,13 +893,14 @@
     "        (pd.DataFrame): subsetted df\n",
     "\n",
     "    \"\"\"\n",
-    "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()"
+    "    return df.loc[(df.city == 'Porto') & (df.neighbourhood == 'Baixa')\n",
+    "                  & (df.aggregate_rating > 4.5) & (df.average_cost_for_two <= 50),\n",
+    "                 ['restaurant name', 'neighbourhood', 'aggregate_rating', 'average_cost_for_two', 'has_table_booking']]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -779,7 +950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 79,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -805,13 +976,12 @@
     "\n",
     "    \"\"\"\n",
     "    \n",
-    "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n"
+    "    return df.reset_index().set_index('restaurant name').sort_values('restaurant name')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -858,7 +1028,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index([u'restaurant name', u'neighbourhood', u'city', u'cuisines',\n",
+       "       u'establishment', u'average_cost_for_two', u'photo_count',\n",
+       "       u'has_table_booking', u'has_online_delivery', u'aggregate_rating',\n",
+       "       u'votes', u'timings'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "restaurants.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -883,13 +1077,14 @@
     "\n",
     "    \"\"\"\n",
     "    \n",
-    "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()"
+    "    return df.assign(average_cost_for_ten = df.average_cost_for_two*5,\n",
+    "                     photo_count_per_vote = df.photo_count / df.votes\n",
+    "                    )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 83,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -934,7 +1129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 84,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -959,13 +1154,12 @@
     "\n",
     "    \"\"\"\n",
     "    \n",
-    "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()"
+    "    return df.drop(['timings', 'has_online_delivery'], 1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 85,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -997,16 +1191,16 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.15+"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
